--- a/KhebraTechnician/KhebraTechnician/ar.lproj/Localizable.strings
+++ b/KhebraTechnician/KhebraTechnician/ar.lproj/Localizable.strings
@@ -248,3 +248,53 @@
 
 
 "Setting"="الإعدادات";
+
+
+"Email"="بريد إلكتروني";
+
+
+"Save"="يحفظ";
+
+
+"Date & time"="التاريخ والوقت";
+
+
+"Apply Now" = "تقدم للطلب";
+
+
+"Incoming Order Details"="تفاصيل الطلب الوارد";
+
+
+"New Order Details"="تفاصيل الطلب الجديد";
+
+
+"Postponement Request"="طلب تأجيل";
+
+
+"Issuance of invoice"="إصدار الفاتورة";
+
+
+"In-Active"="غير نشط";
+
+
+"Active"="نشيط";
+
+
+"Social media"="وسائل التواصل الاجتماعي";
+
+
+"Accept"="قبول";
+
+
+"Whatsapp"="ال WhatsApp";
+
+
+"quick conversation"="محادثة سريعة";
+
+
+"Telephone Conversation"="محادثة هاتفية";
+
+
+"Send Email"="ارسل بريد الكتروني";
+
+
